# databus-python-client

./: .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  PR_BODY.md  README.md  RELEASE_NOTES.md  TEST_COVERAGE_SUMMARY.md  TEST_SUMMARY.md  help_output.txt  pyproject.toml  set_pypi_auth_env.sh  test.sh  test_oep.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug---context-of-the-bug--.md  bug_issue_template.md  feature---feature-request-.md  feature_issue_template.md
.github/workflows/: docker-publish.yml  python-CI.yml
databusclient/: __init__.py  __main__.py  cli.py  client.py  deploy.py  metadata.json
databusclient/api/: delete.py  deploy.py  download.py  queries.py  utils.py
databusclient/consume/: download.py
databusclient/extensions/: webdav.py
databusclient/rclone_wrapper/: upload.py
nextcloudclient/: upload.py
services/backend_regimo/components/dbus/: README.md
tests/: conftest.py  test_cli.py  test_cli_verbose.py  test_compression_conversion.py  test_databusclient.py  test_deploy.py  test_download.py  test_download_auth.py  test_download_mock.py  test_parse_distribution.py  test_utils_verbose.py
