[tool.poetry]
name = "databusclient"
version = "0.14"
description = "A simple client for submitting, downloading, and deleting data on the DBpedia Databus"
authors = ["DBpedia Association"]
license = "Apache-2.0 License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"
requests = "^2.28.1"
tqdm = "^4.42.1"
SPARQLWrapper = "^2.0.0"
rdflib = "^7.2.1"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
pytest = "^7.1.3"
ruff = "^0.5.5"

[tool.poetry.scripts]
databusclient = "databusclient.cli:app"

[tool.ruff]
target-version = "py39"
src = ["databusclient", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
